<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:gravity="center_horizontal"
              android:background="@color/activity_sliding_bg"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include
            layout="@layout/common_toolbar"></include>
    <LinearLayout
            style="@style/common_linearlayout_container_style"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessLeaf">
        <EditText
                android:id="@+id/edt_usercode"
                android:hint="@string/input_username_hint"
                android:inputType="text"
                style="@style/common_edittext_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"/>

        <EditText
                android:id="@+id/edt_pwd"
                android:hint="@string/input_password_hint"
                style="@style/common_edittext_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        <Button
                android:id="@+id/btn_login"
                style="@style/common_primary_button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"/>
        <LinearLayout
                android:layout_marginTop="@dimen/layout_20dp"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/tv_btn_register"
                    android:text="注册账号"
                    android:textSize="@dimen/text_18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="HardcodedText"/>
            <TextView
                    android:text="|"
                    android:padding="@dimen/layout_10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="HardcodedText"/>
            <TextView
                    android:id="@+id/tv_btn_find_password"
                    android:text="找回密码"
                    android:textSize="@dimen/text_18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="HardcodedText"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>